networkpolicy/networkpolicy__basic_kafka_setup__jupyterhub__all__jupyterhub__egress__ports__jupyterhub__nr45__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyterhub--all--jupyterhub--egress--ports--jupyterhub--nr45
  namespace: jupyterhub
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: jupyterhub
